<resources>
    <string name="app_name">WorkSched</string>

    <!--Recycler view layout-->
    <string name="date">1970/01/01 Monday</string>
    <string name="column_name_date">Date</string>
    <string name="column_name_shift_no">Shift No</string>
    <string name="column_name_name_lastname">Name Lastname</string>

    <!--Menu-->
    <string name="settings">Settings</string>

    <!--Settings layout-->
    <string name="edit_shifts_option">Edit Shifts</string>
    <string name="edit_workers_option">Edit Workers</string>
    <string name="edit_employments_option">Edit Department</string>
    <string name="select_employment_to_show_label">Department to show</string>
    <string name="select_employment_to_show_value">Pick department to show...</string>

    <!--Edit Shifts Activity-->
    <string name="column_name_shifts_no">Shift No</string>
    <string name="column_name_shift_name">Shift Name</string>

    <!--Add Shifts Activity-->
    <string name="shift_name_text_label">Shift Name</string>
    <string name="shift_number_text_label">Shift Number</string>
    <string name="shift_type_selector_label">Shift Type</string>
    <string name="shift_type_selector_value">2+2</string>
    <string name="shift_start_date_selector_label">Start Date</string>
    <string name="shift_start_date_selector_value">1970/01/02</string>
    <string name="shift_add_button_label">Add</string>

    <!--Edit Shift Activity-->
    <string name="edit_shift_name_text_label">Shift Name</string>
    <string name="edit_shift_number_text_label">Shift Number</string>
    <string name="edit_shift_type_selector_label">Shift Type</string>
    <string name="edit_shift_type_selector_value">2+2</string>
    <string name="edit_shift_start_date_selector_label">Start Date</string>
    <string name="edit_shift_start_date_selector_value">1970/01/02</string>
    <string name="edit_shift_save_button_label">Save</string>

    <!--Edit Workers Activity-->
    <string name="filter_text_label">Filter</string>
    <string name="column_name_worker_name">Worker name</string>

    <!--Add worker Activity-->
    <string name="worker_name_text_label">Name</string>
    <string name="worker_name_text_value">Name Lastname</string>
    <string name="worker_position_text_label">Position</string>
    <string name="worker_position_text_value">Add workers position...</string>
    <string name="worker_shift_dependency_selector_label">Shift</string>
    <string name="worker_shift_dependency_selector_value">Select shift</string>
    <string name="worker_employment_dependency_selector_label">Department</string>
    <string name="worker_employment_dependency_selector_value">Select department</string>
    <string name="worker_phone_number_text_label">Phone number</string>
    <string name="worker_phone_number_text_value">1234567899</string>
    <string name="worker_add_button_label">Add</string>

    <!--Edit worker Activity-->
    <string name="edit_worker_name_text_label">Name</string>
    <string name="edit_worker_name_text_value">Name Lastname</string>
    <string name="edit_worker_position_text_label">Position</string>
    <string name="edit_worker_position_text_value">Leader of metrology department</string>
    <string name="edit_worker_shift_dependency_selector_label">Shift</string>
    <string name="edit_worker_shift_dependency_selector_value">Select shift</string>
    <string name="edit_worker_employment_dependency_selector_label">Department</string>
    <string name="edit_worker_employment_dependency_selector_value">Select department</string>
    <string name="edit_worker_phone_number_text_label">Phone number</string>
    <string name="edit_worker_phone_number_text_value">1234567899</string>
    <string name="edit_worker_save_button_label">Save</string>

    <!--Edit Employments Activity-->
    <string name="column_show">Show</string>
    <string name="column_name_employment_name">Department Name</string>
    <string name="employment_list_item_text">Department Name</string>

    <!--Add employment Activity-->
    <string name="employment_name_text_label">Department Name</string>
    <string name="employment_name_text_value">Name</string>
    <string name="employment_add_button_label">Add</string>

    <!--Edit employment Activity-->
    <string name="employment_edit_name_text_label">Department Name</string>
    <string name="employment_edit_name_text_value">Name</string>
    <string name="employment_edit_save_button_label">Save</string>

    <!--Activities labels-->
    <string name="setting_activity_label">Settings</string>
    <string name="edit_shifts_activity_label">Shifts</string>
    <string name="add_shift_activity_label">Add Shift</string>
    <string name="edit_workers_activity_label">Workers</string>
    <string name="edit_employments_activity_label">Departments</string>
    <string name="add_employment_activity_label">Add Department</string>
    <string name="add_worker_activity_label">Add Worker</string>
    <string name="edit_one_worker_activity_label">Edit Worker</string>
    <string name="edit_one_shift_activity_label">Edit Shift</string>
    <string name="edit_one_employment_activity_label">Edit Department</string>

    <!--Toasts-->
    <string name="toast_succesfull_add">Add was completed successfully!</string>
    <string name="toast_succesfull_save">Saved successfully!</string>
    <string name="toast_empty_name_field">Please fill name field.</string>
    <string name="toast_empty_phone_field">Please fill phone field.</string>
    <string name="toast_empty_date_field">Please pick start date.</string>
    <string name="toast_failed">Something went wrong...</string>
    <string name="toast_no_type">Pick shift type.</string>
    <string name="toast_no_position">Please fill position field.</string>

    <!--Alert dialogs-->
    <string name="dialog_delete_item_title">Attention!</string>
    <string name="dialog_delete_item_text">Do you want to delete it?</string>
    <string name="dialog_positive_button_label">Yes</string>
    <string name="dialog_negative_button_label">Cancel</string>
    <string name="dialog_pick_type_message">Select shift type.</string>
    <string name="dialog_shift_type_2plus2">2+2</string>
    <string name="dialog_shift_type_day_shift">Day shift</string>
    <string name="dialog_pick_shift_name_message">Select shift name.</string>
    <string name="dialog_pick_employment_name_message">Select department.</string>
</resources>
