<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raimissarka.worksched.AddWorkerActivity">

    <EditText
        android:id="@+id/et_edit_worker_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/edit_worker_phone_number_text_value"
        android:ems="10"
        android:inputType="phone"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_worker_phone_number_label"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_edit_worker_phone_number_label"
        android:layout_marginLeft="0dp" />

    <TextView
        android:id="@+id/tv_edit_worker_phone_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_worker_phone_number_text_label"
        android:labelFor="@+id/et_edit_worker_phone_number"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/fl_edit_worker_employment_dependency_selector"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/fl_edit_worker_employment_dependency_selector" />

    <EditText
        android:id="@+id/et_edit_worker_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:text="@string/edit_worker_name_text_value"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_worker_name_text_label"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_edit_worker_name_text_label" />

    <TextView
        android:id="@+id/tv_edit_worker_name_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_worker_name_text_label"
        android:layout_marginTop="24dp"
        android:labelFor="@+id/et_edit_worker_name_text"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <FrameLayout
        android:id="@+id/fl_edit_worker_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/layout_borders"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/tv_edit_worker_save_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:text="@string/edit_worker_save_button_label" />
    </FrameLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_edit_worker_position_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_worker_position_text_label"
        android:labelFor="@+id/et_edit_worker_position_value"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/et_edit_worker_name_text"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_worker_name_text" />

    <EditText
        android:id="@+id/et_edit_worker_position_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="textPersonName"
        android:text="@string/edit_worker_position_text_value"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_worker_position_label"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_edit_worker_position_label" />

    <FrameLayout
        android:id="@+id/fl_edit_worker_shift_dependency_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/layout_borders"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_worker_position_value"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/et_edit_worker_position_value">

        <TextView
            android:id="@+id/tv_edit_worker_shift_dependency_selector_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/edit_worker_shift_dependency_selector_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_edit_worker_shift_dependency_selector_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:text="@string/edit_worker_shift_dependency_selector_value" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_edit_worker_employment_dependency_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/layout_borders"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/fl_edit_worker_shift_dependency_selector"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_edit_worker_shift_dependency_selector"
        android:layout_marginRight="8dp">

        <TextView
            android:id="@+id/tv_edit_worker_employment_dependency_selector_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/edit_worker_employment_dependency_selector_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_edit_worker_employment_dependency_selector_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:text="@string/edit_worker_employment_dependency_selector_value" />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
