<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raimissarka.worksched.AddShiftActivity">

    <FrameLayout
        android:id="@+id/fl_shift_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/layout_borders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/my_toolbar">

        <TextView
            android:id="@+id/tv_shift_add_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:text="@string/shift_add_button_label" />
    </FrameLayout>

    <ImageView
        android:id="@+id/iw_date_pick_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_borders"
        app:srcCompat="@android:drawable/ic_menu_month"
        app:layout_constraintLeft_toRightOf="@+id/et_shift_start_date_selector_value"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/et_shift_start_date_selector_value"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_shift_start_date_selector_value"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/et_shift_start_date_selector_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/shift_start_date_selector_value"
        android:ems="10"
        android:textIsSelectable="false"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintLeft_toLeftOf="@+id/tv_shift_start_date_selector_label"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_shift_start_date_selector_label" />

    <TextView
        android:id="@+id/tv_shift_start_date_selector_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shift_start_date_selector_label"
        app:layout_constraintLeft_toLeftOf="@+id/fl_shift_type_selector"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/fl_shift_type_selector" />

    <FrameLayout
        android:id="@+id/fl_shift_type_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/layout_borders"
        app:layout_constraintLeft_toLeftOf="@+id/tv_shift_number_text_value"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_shift_number_text_value">

        <TextView
            android:id="@+id/tv_shift_type_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/shift_type_selector_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_shift_type_text_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:text="@string/shift_type_selector_value" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_shift_number_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shift_number_text_label"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/et_shift_name_text"
        app:layout_constraintLeft_toLeftOf="@+id/et_shift_name_text" />

    <TextView
        android:id="@+id/tv_shift_name_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shift_name_text_label"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/et_shift_name_text"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!--TODO Add hints to edittext's-->

    <EditText
        android:id="@+id/et_shift_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:text="@string/shift_name_text_label"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_shift_name_text_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_shift_name_text_label" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/tv_shift_number_text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_shift_number_text_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_shift_number_text_label" />

</android.support.constraint.ConstraintLayout>
