<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raimissarka.worksched.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:visibility="visible"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="50dp">

    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/colorSimpleText"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/columnNameNameLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="0dp"
            android:text="@string/column_name_name_lastname"
            app:layout_constraintBottom_toBottomOf="@+id/columnNameDate"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/columnNameDate"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/columnNameShiftNumber"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/columnNameShiftNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/column_name_shift_no"
            app:layout_constraintTop_toBottomOf="@+id/tvDate"
            app:layout_constraintLeft_toRightOf="@+id/columnNameDate"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/columnNameDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/column_name_date"
            app:layout_constraintBottom_toBottomOf="@+id/columnNameShiftNumber"
            app:layout_constraintTop_toTopOf="@+id/columnNameShiftNumber"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_workers"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/columnNameDate"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
