<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raimissarka.worksched.AddEmploymentActivity">

    <EditText
        android:id="@+id/et_employment_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:text="@string/employment_name_text_value"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_employment_name_text_label"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_employment_name_text_label" />

    <TextView
        android:id="@+id/tv_employment_name_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employment_name_text_label"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        android:labelFor="@+id/et_employment_name_text"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <FrameLayout
        android:id="@+id/fl_employment_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:background="@drawable/layout_borders"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/tv_employment_add_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:text="@string/employment_add_button_label" />
    </FrameLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

</android.support.constraint.ConstraintLayout>
